WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
175905
Leaking CARenderServerBuffer in PlatformWebView::windowSnapshotImage()
https://bugs.webkit.org/show_bug.cgi?id=175905
Summary
Leaking CARenderServerBuffer in PlatformWebView::windowSnapshotImage()
Jonathan Bedard
Reported
2017-08-23 13:46:56 PDT
On iOS Simulator, we are failing to free a CARenderServerBuffer. This can cause testers to run out of application memory.
Attachments
Patch
(1.47 KB, patch)
2017-08-23 15:12 PDT
,
Jonathan Bedard
no flags
Details
Formatted Diff
Diff
Patch
(1.79 KB, patch)
2017-08-23 16:16 PDT
,
Jonathan Bedard
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Jonathan Bedard
Comment 1
2017-08-23 15:12:46 PDT
Created
attachment 318927
[details]
Patch
Jonathan Bedard
Comment 2
2017-08-23 16:16:35 PDT
Created
attachment 318937
[details]
Patch
WebKit Commit Bot
Comment 3
2017-08-23 16:53:45 PDT
Comment on
attachment 318937
[details]
Patch Clearing flags on attachment: 318937 Committed
r221117
: <
http://trac.webkit.org/changeset/221117
>
WebKit Commit Bot
Comment 4
2017-08-23 16:53:47 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2017-08-23 16:54:05 PDT
<
rdar://problem/34047743
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug