Leaking CARenderServerBuffer in PlatformWebView::windowSnapshotImage() https://bugs.webkit.org/show_bug.cgi?id=175905

Reviewed by Tim Horton.

* WebKitTestRunner/ios/PlatformWebViewIOS.mm:
(WTR::PlatformWebView::windowSnapshotImage): Pass CARenderServerBuffer to CGDataProviderCreateWithData
so that the buffer can be destroyed.


Canonical link: https://commits.webkit.org/192569@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@221117 268f45cc-cd09-0410-ab3c-d52691b4dbfc